arreglo_registro_db